clj/coffi: AOT compile benchmark