@@ -16,6 +16,11 @@ tup upd && \
     clojure -J--enable-native-access=ALL-UNNAMED \
         -Sdeps '{:paths ["." "clojure_panama/classes"]}' \
         -M -e '(binding [*compile-path* "clojure_panama/classes"] (compile (quote clojure-panama.hello)))' && \
+    rm -rf clojure_coffi/classes && \
+    mkdir -p clojure_coffi/classes && \
+    (cd clojure_coffi && \
+        clojure -J--enable-native-access=ALL-UNNAMED \
+            -M -e '(binding [*compile-path* "classes"] (compile (quote ffi-overhead.coffi)))') && \
     nim c -d:release --parallelBuild:1 --nimcache:nimcache -o:nim_hello --passL:"-Lnewplus -lnewplus -Wl,-rpath,$$ORIGIN/newplus" hello.nim && \
     zig build -Doptimize=ReleaseFast && \
     tup upd && \
